implemented request data in home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,5 +7,10 @@
   <body>
     <h1> RottenPotatoes 2 </h1>
     <p> By: Mohsin Ismail & Nivethan Sethupathi </p>
+    <p> Enter a movie </p> 
+    <form method="POST">
+    <input name="text">
+    <input type="submit">
+</form>
   </body>
 </html>
