--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Flask Tutorial</title>
+    <title>Rotten Potatoes</title>
   </head>
   <body>
     <h1> RottenPotatoes 2 </h1>
