implementing basic CSS

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="/static/styles.css">
     <meta charset="utf-8">
     <title>Rotten Potatoes</title>
   </head>
   <body>
-    <h1> RottenPotatoes 2 </h1>
+    <h1> Rotten Potatoes </h1>
     <p> By: Mohsin Ismail & Nivethan Sethupathi </p>
     <p> Enter a movie </p>
     <form method="POST">
