--- a/templates/submitted_form.html
+++ b/templates/submitted_form.html
@@ -1,8 +1,7 @@
 <html>
  <head>
-   <link rel="stylesheet" href="styles.css">
    <title>Submitted form</title>
-   <link rel="stylesheet" type="text/css" href="/static/styles.css">
+   <link rel="stylesheet" type="text/css" href="/static/styles.css" type="text/css">
  </head>
  <body>
    <div id="container">
