Radio buttons are now working. Made a few changes to html pages.

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,13 +8,11 @@
   <body>
     <h1> Rotten Potatoes </h1>
     <p> By: Mohsin Ismail & Nivethan Sethupathi </p>
-    <p> Recommend by:</p>>
-    <form name="metricForm" action="" method="POST">
-      <input type="radio" name="metric" id="keyword" value="keyword"> Keyword<br>
-      <input type="radio" name="metric" id="ratings" value="ratings"> Ratings<br>
-    </form>
-    <p> Enter a movie </p>
+    <p> Recommend using:</p>
     <form method="POST">
+    <input type="radio" name="metric" id="keywords" value="keywords" checked> Keywords<br>
+    <input type="radio" name="metric" id="ratings" value="ratings"> Ratings<br>
+    <p> Enter a movie </p>
     <input name="text">
     <input type="submit">
 </form>
