--- a/templates/submitted_form.html
+++ b/templates/submitted_form.html
@@ -1,16 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
  <head>
-   <title>Submitted form</title>
    <link rel="stylesheet" type="text/css" href="/static/styles.css" type="text/css">
+   <meta charset="utf-8">
+   <title>Your Recommendations</title>
  </head>
  <body>
    <div id="container">
      <div class="pagetitle">
-       <h1>Recommended for you!</h1>
+       <h1>Rotten Potatoes </h1>
+       <h2>Recommended for you!</h2>
      </div>
      <div id="main">
        <p>You entered: {{name}}</p>
-       <p>Here are your recommendations:</p>
+       <p>Here are your recommendations using {{metric}}:</p>
        <p>
           <strong>1)</strong> {{rec1}} <br>
           <strong>2)</strong> {{rec2}} <br>
